2002-03-28  M.L.
	
	    added a few mirrors.

2002-03-15  M.L. 

	    changed PRE_REMOVE

2002-03-12  M.L. 

	    version++

2002-03-12  Kyle Salee 

	    1.0.4 and before: forgotten history...