@@ -1,5 +1,5 @@
            SPELL=postfix
-         VERSION=1.1.6
+         VERSION=1.1.7
           SOURCE=$SPELL-$VERSION.tar.gz
 SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
    SOURCE_URL[0]=ftp://ftp.porcupine.org/mirrors/postfix-release/official/$SOURCE
@@ -8,7 +8,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
    SOURCE_URL[3]=ftp://ftp.doc.cs.univ-paris8.fr/mirrors/ftp.porcupine.org/postfix-release/official/$SOURCE
         WEB_SITE=http://www.postfix.org
          ENTERED=20020125
-         UPDATED=20020328
+         UPDATED=20020331
            SHORT="postfix is a MTA."
 cat << EOF
 Postfix is an attempt to provide an alternative to the widely-used
