@@ -1,3 +1,11 @@
+2002-03-31  M.L.
+
+	    Version++ (1.1.7)
+
+2002-03-29  M.L.
+
+	    Modified postfix.sh (clean restart, no more automatic newaliases on startup (!)
+
 2002-03-28  M.L.
 	
 	    added a few mirrors.
